unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/OrderApi__Sales_Order_Line__c.object-meta.xml
<CustomObject>
    <description>Sales Order Lines track the Items associated with Sales Orders.</description>
    <label>Sales Order Line</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Sales Order Line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>