unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Amount_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Amount_Invoiced__c</fullName>
    <formula>&#39;$&#39;&amp;TEXT(OrderApi__Overall_Total__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Invoiced</label>
    <type>Text</type>
</CustomField>