unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Annual_Dues__c.field-meta.xml
<CustomField>
    <fullName>Annual_Dues__c</fullName>
    <formula>OrderApi__Account__r.FON_Annual_Dues__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Dues</label>
    <type>Text</type>
</CustomField>