unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Billing_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Billing_Quarter__c</fullName>
    <label>Billing Quarter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>