unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/DonorApi__Tax_Deductible_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Tax_Deductible_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**System Calculated/Override** (Unit Price * Quantity) - (Quantity * Item Cost) only applies to lines associated with items where &quot;Is Tax Deductible&quot; is checked.</description>
    <inlineHelpText>**System Calculated/Override** (Unit Price * Quantity) - (Quantity * Item Cost) only applies to lines associated with items where &quot;Is Tax Deductible&quot; is checked.</inlineHelpText>
    <label>Tax Deductible Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>