unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/DonorApi__Write_In__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Write_In__c</fullName>
    <label>Write In</label>
    <length>255</length>
    <type>Text</type>
</CustomField>