unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Event_Is_NCP_Exam__c.field-meta.xml
<CustomField>
    <fullName>Event_Is_NCP_Exam__c</fullName>
    <formula>EventApi__Event__r.Is_NCP_Exam__c</formula>
    <label>Event Is NCP Exam</label>
    <type>Checkbox</type>
</CustomField>