unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <formula>EventApi__Event__r.Name</formula>
    <label>Event Name</label>
    <type>Text</type>
</CustomField>