unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/EventApi__Attendee__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Attendee.</description>
    <inlineHelpText>Link to related Attendee.</inlineHelpText>
    <label>Attendee</label>
    <referenceTo>EventApi__Attendee__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>