unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/EventApi__Is_Required_Schedule_Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Required_Schedule_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the schedule item is required with ticket.</description>
    <inlineHelpText>When checked, the schedule item is required with ticket.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>