unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/EventApi__Ticket_Type__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Ticket_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Ticket Type.</description>
    <inlineHelpText>Link to related Ticket Type.</inlineHelpText>
    <label>Ticket Type</label>
    <referenceTo>EventApi__Ticket_Type__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>