unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_Attendee_Name__c</fullName>
    <label>Attendee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>