unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Invoice_Line_Description__c.field-meta.xml
<CustomField>
    <fullName>FON_Invoice_Line_Description__c</fullName>
    <formula>IF ( FON_Is_Event_Registration__c == true,OrderApi__Line_Description__c  &amp; &#39; (&#39; &amp;    FON_Attendee_Name__c &amp; &#39;)&#39;,OrderApi__Line_Description__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Description</label>
    <type>Text</type>
</CustomField>