unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Is_Event_Registration__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Event_Registration__c</fullName>
    <formula>IF(EventApi__Event__c != null, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Event Registration</label>
    <type>Checkbox</type>
</CustomField>