unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Is_Processed__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Processed__c</fullName>
    <formula>IF( 
  OR(
    AND(TEXT(OrderApi__Sales_Order__r.OrderApi__Posting_Entity__c) = &#39;Invoice&#39;, OrderApi__Sales_Order__r.OrderApi__Is_Closed__c = true, 
      OrderApi__Sales_Order__r.OrderApi__Is_Posted__c = true),
    AND(TEXT(OrderApi__Sales_Order__r.OrderApi__Posting_Entity__c) = &#39;Receipt&#39;, OrderApi__Sales_Order__r.OrderApi__Sales_Order_Status__c = &#39;Paid&#39;)),
  true,
  false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Processed</label>
    <type>Checkbox</type>
</CustomField>