unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Is_Prorate__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Prorate__c</fullName>
    <formula>IF(CONTAINS(OrderApi__Price_Rule__r.Name,&#39;Prorate&#39;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Prorate</label>
    <type>Checkbox</type>
</CustomField>