unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Number_Of_Attendees__c.field-meta.xml
<CustomField>
    <fullName>FON_Number_Of_Attendees__c</fullName>
    <label>Number Of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>