unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Sales_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>FON_Sales_Order_Status__c</fullName>
    <formula>OrderApi__Sales_Order__r.OrderApi__Sales_Order_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Order Status</label>
    <type>Text</type>
</CustomField>