unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Sponsored_Account__c.field-meta.xml
<CustomField>
    <fullName>FON_Sponsored_Account__c</fullName>
    <formula>OrderApi__Account__r.Name</formula>
    <label>Sponsored Account</label>
    <type>Text</type>
</CustomField>