unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/FON_Year__c.field-meta.xml
<CustomField>
    <fullName>FON_Year__c</fullName>
    <formula>YEAR(DATEVALUE(CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>