unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Invoice_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Subscription__c</fullName>
    <formula>IF(OrderApi__Sales_Order__r.FON_Billing_Type__c = &#39;Item Based&#39;, &#39;Item Based - &#39;&amp;OrderApi__Subscription_Plan__r.Short_Name__c, OrderApi__Subscription_Plan__r.Short_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription</label>
    <type>Text</type>
</CustomField>