unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Is_Sponsoring_Licensing_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Is_Sponsoring_Licensing_Invoice__c</fullName>
    <formula>OrderApi__Sales_Order__r.Is_Sponsoring_Licensing_Invoice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sponsoring/Licensing Invoice</label>
    <type>Checkbox</type>
</CustomField>