unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Legacy_Sales_Order_Line_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Sales_Order_Line_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Sales Order Line ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>