unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/Membership_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Date__c</fullName>
    <formula>IF(TEXT(MONTH(Sponsoring_Relationship__r.Date_Accepted_by_ECCHO__c)) != null, TEXT(MONTH(Sponsoring_Relationship__r.Date_Accepted_by_ECCHO__c))&amp;&#39;/&#39;&amp;TEXT(DAY(Sponsoring_Relationship__r.Date_Accepted_by_ECCHO__c))&amp;&#39;/&#39;&amp;TEXT(YEAR(Sponsoring_Relationship__r.Date_Accepted_by_ECCHO__c)), &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Date</label>
    <type>Text</type>
</CustomField>