unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required System Calculated Override ** Link to the Account that is assigned to the Sales Order Line -- valid if the linked &quot;Item&quot; &quot;Enable Assignments&quot; is checked, and the &quot;Entity&quot; is set to &quot;Account&quot;. Defaults to the Sales Order &quot;Account&quot;.</description>
    <inlineHelpText>** Conditionally Required System Calculated Override ** Link to the Account that is assigned to the Sales Order Line -- valid if the linked &quot;Item&quot; &quot;Enable Assignments&quot; is checked, and the &quot;Entity&quot; is set to &quot;Account&quot;. Defaults to the Sales Order &quot;Account&quot;</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>