unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Adjustment_Reason__c</fullName>
    <description>Reason for the adjustment.</description>
    <inlineHelpText>Reason for the adjustment.</inlineHelpText>
    <label>Adjustment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>