unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Adjustments__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Adjustments__c</fullName>
    <description>Sum of all adjustments, both positive and negative, applied to this sales order line.</description>
    <inlineHelpText>Sum of all adjustments, both positive and negative, applied to this sales order line.</inlineHelpText>
    <label>Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>