unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Amount_Refunded__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Amount_Refunded__c</fullName>
    <description>Sum of all refunds applied to this sales order line.</description>
    <inlineHelpText>Sum of all refunds applied to this sales order line.</inlineHelpText>
    <label>Amount Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>