unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__AR_Account__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__AR_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the GL Account used for A/R transactions.</description>
    <inlineHelpText>Identifies the GL Account used for A/R transactions.</inlineHelpText>
    <label>A/R Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Sales Order Lines (A/R Account)</relationshipLabel>
    <relationshipName>Sales_Order_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>