unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Assignments_Allowed__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignments_Allowed__c</fullName>
    <description>** System Calculated ** If the Item &quot;Enable Assignments&quot; and &quot;Restrict Number of Assignments&quot; fields are checked, the Item &quot;Maximum Number of Assignments&quot; x the Line &quot;Quantity&quot; is set. Otherwise no value is set.</description>
    <formula>IF (  OrderApi__Item__r.OrderApi__Enable_Assignments__c &amp;&amp;  OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c ,   OrderApi__Item__r.OrderApi__Maximum_Number_of_Assignments__c *  OrderApi__Quantity__c  , IF ( NOT(OrderApi__Item__r.OrderApi__Restrict_Number_of_Assignments__c) &amp;&amp; OrderApi__Item__r.OrderApi__Enable_Assignments__c, null , null ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** If the Item &quot;Enable Assignments&quot; and &quot;Restrict Number of Assignments&quot; fields are checked, the Item &quot;Maximum Number of Assignments&quot; x the Line &quot;Quantity&quot; is set. Otherwise no value is set.</inlineHelpText>
    <label>Assignments Allowed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>