unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Auto_Assign__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When it is checked, assignment records will be created depending on &quot;Auto Assign Rule&quot;.</description>
    <inlineHelpText>When it is checked, assignment records will be created depending on &quot;Auto Assign Rule&quot;.</inlineHelpText>
    <label>Auto Assign</label>
    <type>Checkbox</type>
</CustomField>