unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Auto_Assign_Account_Contacts__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Assign_Account_Contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when a Auto Assign Rule set &quot;All Account Contacts&quot;</description>
    <inlineHelpText>Checked when a Auto Assign Rule set &quot;All Account Contacts&quot;</inlineHelpText>
    <label>Auto Assign Account Contacts</label>
    <type>Checkbox</type>
</CustomField>