unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Auto_Assign_Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Assign_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when Auto Assignment Rule set to &quot;Contact&quot;</description>
    <inlineHelpText>Checked when Auto Assignment Rule set to &quot;Contact&quot;</inlineHelpText>
    <label>Auto Assign Contact</label>
    <type>Checkbox</type>
</CustomField>