unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Auto_Assign_Rule__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Auto_Assign_Rule__c</fullName>
    <description>Defines the Assignment creation rule for related Account or Contact.</description>
    <inlineHelpText>Defines the Assignment creation rule for related Account or Contact.</inlineHelpText>
    <label>Auto Assign Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>All Account Contacts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>