unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Balance_Due__c</fullName>
    <description>Defines the remaining amount due for this sales order line item.</description>
    <inlineHelpText>This field identifies the remaining balance unpaid for this invoice line.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>