unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Business_Group__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Business_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Default value is mapped from the parent sales order. The Business Group controls what items are available to associate with the order line. If no value exists, all active items will be allowed to be associated.</description>
    <inlineHelpText>**System Calculated/Override** Default value is mapped from the parent sales order. The Business Group controls what items are available to associate with the order line. If no value exists, all active items will be allowed to be associated.</inlineHelpText>
    <label>Business Group</label>
    <referenceTo>OrderApi__Business_Group__c</referenceTo>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>