unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Conditionally Required System Calculated Override ** Link to the Contact who is the primary assignee of the Item purchased on the Sales Order Line. Required if &quot;Enable Assignments&quot; is checked on the related Item. Defaults to the Sales Order Contact.</description>
    <inlineHelpText>** Conditionally Required System Calculated Override ** Link to the Contact who is the primary assignee of the Item purchased on the Sales Order Line. Required if &quot;Enable Assignments&quot; is checked on the related Item. Defaults to the Sales Order Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>