unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Conversion_Rate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This value defines the conversion rate used from the conversion table at the time the record was created.</description>
    <inlineHelpText>This value defines the conversion rate used from the conversion table at the time the record was created.</inlineHelpText>
    <label>Conversion Rate</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>