unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>**System Calculated/Override** Link to the Credit Memo record, when an overpayment is made.</description>
    <inlineHelpText>**System Calculated/Override** Link to the Credit Memo record, when an overpayment is made.</inlineHelpText>
    <label>Credit Memo</label>
    <referenceTo>OrderApi__Credit_Memo__c</referenceTo>
    <relationshipLabel>Sales Order Lines</relationshipLabel>
    <relationshipName>Sales_Order_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>