unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Disable_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Disable_Scheduling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Scheduling is disabled for this line and the total is added as a line to the first installment.</description>
    <inlineHelpText>Scheduling is disabled for this line and the total is added as a line to the first installment.</inlineHelpText>
    <label>Disable Scheduling</label>
    <type>Checkbox</type>
</CustomField>