unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Do_Not_Collect_Payment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Do_Not_Collect_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the related Sales Order Line will not be added to the EPayment and Receipt. Customer will not be charged for this Sales Order Line.</description>
    <inlineHelpText>When checked, the related Sales Order Line will not be added to the EPayment and Receipt. Customer will not be charged for this Sales Order Line.</inlineHelpText>
    <label>Requires PreAuthorize Payment</label>
    <type>Checkbox</type>
</CustomField>