unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Enable_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Enable_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the subscription will automatically attempt to renew itself by charging the related Payment Method. Defaults unchecked.</description>
    <inlineHelpText>When checked, the subscription will automatically attempt to renew itself by charging the related Payment Method. Defaults unchecked.</inlineHelpText>
    <label>Enable Auto Renew</label>
    <type>Checkbox</type>
</CustomField>