unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Entity__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Entity__c</fullName>
    <description>** Conditionally Required ** Select &quot;Account&quot; to assign the Item on the Sales Order Line to the linked &quot;Account&quot; field -- otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order.</description>
    <inlineHelpText>** Conditionally Required ** Select &quot;Account&quot; to assign the Item on the Sales Order Line to the linked &quot;Account&quot; field -- otherwise select &quot;Contact&quot;. Defaults to the value of the same field on the Sales Order.</inlineHelpText>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>