unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Incomplete__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Incomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked this Sales Order Line is identified as a line that has not been fully completed to be added to the cart.</description>
    <inlineHelpText>When checked this Sales Order Line is identified as a line that has not been fully completed to be added to the cart.</inlineHelpText>
    <label>SYSTEM</label>
    <type>Checkbox</type>
</CustomField>