unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Amendment__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, related Sales Order Line is considered as &quot;Subscription Amendment&quot;</description>
    <inlineHelpText>When checked, related Sales Order Line is considered as &quot;Subscription Amendment&quot;.</inlineHelpText>
    <label>Is Amendment</label>
    <type>Checkbox</type>
</CustomField>