unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Installment_Calculated__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Installment_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated** Checked if sol type is installment and if the amount is Calculated.</description>
    <inlineHelpText>**System Calculated** Checked if sol type is installment and if the amount is Calculated.</inlineHelpText>
    <label>Is Installment Calculated</label>
    <type>Checkbox</type>
</CustomField>