unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Line_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Line_Posted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the adjustment line is posted and a Transaction is created in the system.</description>
    <inlineHelpText>When checked, the adjustment line is posted and a Transaction is created in the system.</inlineHelpText>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>