unpackaged/main/default/objects/OrderApi__Sales_Order_Line__c/fields/OrderApi__Is_Posted__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Posted__c</fullName>
    <description>When checked all Invoices related to the Sales Order will post an receivable transaction to the GL.</description>
    <formula>OrderApi__Sales_Order__r.OrderApi__Is_Posted__c</formula>
    <inlineHelpText>When checked all Invoices related to the Sales Order will post an receivable transaction to the GL.</inlineHelpText>
    <label>Is Posted</label>
    <type>Checkbox</type>
</CustomField>